performance-aws-eks-cluster-minimal.md
Signed-off-by: Sergey Matvienko <smatvienko@thingsboard.io>